--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content=" Lotus Store: Always stay with the trend. Browse, select and, checkout"
+      content=" Service Hive: Always stay with the trend. Browse, select and, checkout"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>LotusStore</title>
+    <title>Service Hive</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
